# DeerFlowResearcher

./: .env.aws  .env.example  .gitignore  ACCESS_INSTRUCTIONS.md  API_PROVIDER_ANALYSIS.md  AWS_MIGRATION_STEPS.md  CLAUDE.md  CONTINUE_CHAT_TEST_GUIDE.md  DUPLICATE_REPORT_ANALYSIS.md  Dockerfile  FINAL_STATUS_REPORT.md  Makefile  RAG_ANALYSIS_SUMMARY.md  README.md  README_OMEGA_TERMINAL.md  RESEARCH_DISPLAY_FIX.md  RESEARCH_FLOW_FIXES.md  TESTING_CHECKLIST.md  TEST_REPORT.md  capture_browser_logs.py  capture_screenshots.py  check-voice-button.js  check_db_content.py  check_documents_page.py  check_pinecone_data.py  check_pinecone_indexes.py  check_plan_content.py  check_recent_research_sessions.py  check_session_by_thread.py  check_user_ids_in_pinecone.py  check_uuid_issue.py  conf.yaml.example  create_test_user.py  create_test_user_v2.py  debug-backend.py  debug_api.html  debug_citation_content.sh  debug_citation_issue.py  debug_citations.py  debug_continue_chat.py  (+82 more)
aws-deployment/: deploy-to-vpc.sh  deploy-via-ssm.sh  openbb-vpc-deployment.yaml  sync-code-to-ec2.sh  user-data.sh
aws-migration/: MIGRATION_STATUS.md  README.md  auto-migrate.py  aws-config.env  check-elasticache-status.sh  check-rds-connection.sh  finalize-migration.sh  migrate-sqlite-to-mysql.py  migrate-sqlite-to-postgres.py  quick-setup.sh  rds-mysql-schema.sql  rds-schema.sql  safe-migrate.py  setup-aws-credentials.sh  setup-aws-resources.sh  setup-elasticache.sh  test-aws-connection.py  test-mysql-connection.py
mcp-servers/pinecone-mcp/: README.md  mcp-server.py  pyproject.toml  test_server.py
(+1098 files in other folders)
